--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-website-yt-1",
   "version": "0.1.0",
   "private": true,
+  "homepages" : "http://raul12382.github.io/react-apitocs",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,14 +10,16 @@
     "antd": "^4.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
-  },
-  "scripts": {
+  },  "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
