--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-website-yt-1",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://raul12382.github.io/react-apitocs",
+  "homepage": "http://raul12382.github.io/react-apitocs",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,9 +17,10 @@
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
-  },  "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
